Replace dot with hash

--- a/test/methods.html
+++ b/test/methods.html
@@ -11,9 +11,7 @@
   <script src="../assets/js/qunit.js"></script>
   <script src="../assets/js/jquery.min.js"></script>
   <script src="../dist/validator.js"></script>
-
-  <!-- methods -->
-  <script src="methods/sync.js"></script>
+  <script src="methods/update.js"></script>
   <script src="methods/addRule.js"></script>
   <script src="methods/removeRule.js"></script>
   <script src="methods/addValidator.js"></script>
